Class 1—change section linking to use id instead of anchor, formatting fixes (inconsistent spacing in example code, browser ul wackyness)

--- a/css/slides.css
+++ b/css/slides.css
@@ -11,32 +11,39 @@ pre.massive code {
   font-size:90%;
 }
 
+img[src^='images/gdi_logo_badge.png'] { 
+	max-height: 300px; 
+	border: none !important; 
+	box-shadow: none !important;
+}
+
 /******************************
 * Class 1 Browser unordered list
 *******************************/
-/* line 9, source/slides.css */
+.browser-list li {
+	width: 50%;
+	float: left;
+}
+
 li.chrome {
   list-style-image: url('../images/chrome.svg');
 }
-
-/* line 9, source/slides.css */
 li.firefox {
   list-style-image: url('../images/firefox.svg');
 }
-
-/* line 9, source/slides.css */
 li.ie {
   list-style-image: url('../images/ie.svg');
 }
-
-/* line 9, source/slides.css */
-li.webkit {
-  list-style-image: url('../images/webkit.svg');
+li.safari {
+  list-style-image: url('../images/safari.svg');
 }
-
-/* line 9, source/slides.css */
 li.opera {
   list-style-image: url('../images/opera.svg');
+}
+li.etc {
+	padding-top: 50px;
+	height: 100px;
+	list-style: none;
 }
 
 /******************************
